RESOLVED FIXED182222
REGRESSION(r227223): http/tests/resourceLoadStatistics/clear-in-memory-and-persistent-store-one-hour.html, http/tests/resourceLoadStatistics/grandfathering.html timing out on GTK, WPE
https://bugs.webkit.org/show_bug.cgi?id=182222
Summary REGRESSION(r227223): http/tests/resourceLoadStatistics/clear-in-memory-and-pe...
Zan Dobersek
Reported 2018-01-28 11:35:03 PST
The following two tests are timing out after r227223: http/tests/resourceLoadStatistics/clear-in-memory-and-persistent-store-one-hour.html http/tests/resourceLoadStatistics/grandfathering.html https://trac.webkit.org/changeset/227223/webkit
Attachments
Patch (10.96 KB, patch)
2018-01-30 18:27 PST, Michael Catanzaro
no flags
Zan Dobersek
Comment 1 2018-01-28 11:53:25 PST
Also failing on WPE. For both ports is likely due to missing port-specific resource-load statistics functionality.
Michael Catanzaro
Comment 2 2018-01-28 15:14:12 PST
(In reply to Zan Dobersek from comment #1) > Also failing on WPE. For both ports is likely due to missing port-specific > resource-load statistics functionality. That commit added completion handler parameters (required for the WebsiteDataManager removal API to work properly), but it only updated the Cocoa API, not the cross-platform C API used by the test runner. I'm not sure whether we should roll it out or not. It doesn't break anything except the test runner (well, it breaks the C API, but that's used only by the test runner), and the tests must have already been flaky before this change, and it's probably simpler to just add the callback parameters (haven't checked). But this is not the first time this has happened recently (see bug #181231), and we need to be stricter about breaking the test runner like this. The root of the problem is that it's hard to update the cross-platform test runner code from Mac, because it is using Cocoa-specific API instead of the C API, to make it easier to delete the C API in the future. But this makes it much harder to make changes that affect the test runner, and it's not clear what the endgame is for removing the C API without breaking the test runner. This is worth discussion on webkit-dev.
Michael Catanzaro
Comment 3 2018-01-30 18:26:05 PST
CCing owners to approve the WK2 changes
Michael Catanzaro
Comment 4 2018-01-30 18:27:47 PST
WebKit Commit Bot
Comment 5 2018-01-31 14:43:34 PST
Comment on attachment 332735 [details] Patch Clearing flags on attachment: 332735 Committed r227933: <https://trac.webkit.org/changeset/227933>
WebKit Commit Bot
Comment 6 2018-01-31 14:43:36 PST
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 7 2018-01-31 19:04:20 PST
Thank you for the quick review!
Note You need to log in before you can comment on or make changes to this bug.