REGRESSION(r227223): http/tests/resourceLoadStatistics/clear-in-memory-and-persistent-store-one-hour.html, http/tests/resourceLoadStatistics/grandfathering.html timing out on GTK, WPE https://bugs.webkit.org/show_bug.cgi?id=182222

Reviewed by Alex Christensen.

Source/WebKit:

Add callbacks to notify when resource load statistics deletion is complete.

* UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreStatisticsClearInMemoryAndPersistentStore):
(WKWebsiteDataStoreStatisticsClearInMemoryAndPersistentStoreModifiedSinceHours):
* UIProcess/API/C/WKWebsiteDataStoreRef.h:

Tools:

Use the new API to notify when resource load statistics deletion is complete.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::statisticsClearThroughWebsiteDataRemovalCallback):
(WTR::TestController::statisticsClearInMemoryAndPersistentStore):
(WTR::TestController::statisticsClearInMemoryAndPersistentStoreModifiedSinceHours):

LayoutTests:

* platform/gtk/TestExpectations:
* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/198156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227933 268f45cc-cd09-0410-ab3c-d52691b4dbfc